[gd_scene load_steps=7 format=3 uid="uid://2bq6rhpk22ne"]

[ext_resource type="Theme" uid="uid://qkvjcwtwjvf7" path="res://nodes/ui/menu_theme.tres" id="1_7dnji"]
[ext_resource type="Script" path="res://nodes/ui/menu_bracket/game/Match.gd" id="2_q6ifq"]

[sub_resource type="LabelSettings" id="LabelSettings_amoi2"]
line_spacing = 2.0
font_size = 32
font_color = Color(0.752941, 0.345098, 0.368627, 1)
outline_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2sn0a"]
line_spacing = 2.0
font_size = 32
font_color = Color(0.752941, 0.345098, 0.368627, 1)
outline_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vvrge"]
line_spacing = 2.0
font_size = 32
font_color = Color(0.188235, 0.639216, 0.752941, 1)
outline_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5s0r3"]
line_spacing = 2.0
font_size = 32
font_color = Color(0.188235, 0.639216, 0.752941, 1)
outline_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[node name="Match" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_7dnji")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("2_q6ifq")

[node name="background" type="ColorRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_7dnji")
color = Color(0.290196, 0.988235, 1, 0.862745)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
columns = 2

[node name="player_0" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.0352941, 0.0196078, 1)
text = "Dubert Blaine Wolfeschlegelsteinhausenbergerdorff Sr."
label_settings = SubResource("LabelSettings_amoi2")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="player_1" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.0352941, 0.0196078, 1)
text = "p1"
label_settings = SubResource("LabelSettings_2sn0a")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="middlebandL" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_7dnji")

[node name="middlebandR" type="ColorRect" parent="GridContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_7dnji")

[node name="player_2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.0352941, 0.0196078, 1)
text = "p2"
label_settings = SubResource("LabelSettings_vvrge")
horizontal_alignment = 1
autowrap_mode = 3

[node name="player_3" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.0352941, 0.0196078, 1)
text = "p3"
label_settings = SubResource("LabelSettings_5s0r3")
horizontal_alignment = 1
autowrap_mode = 3
